--- a/localisation/decisions_l_english.yml
+++ b/localisation/decisions_l_english.yml
@@ -30,3 +30,11 @@
  war_start_WPK_desc:0 "The tension on the Korean peninsula has risen again, the future war is already visible on the horizon."
  war_start_ROK:0 "Coming war"
  war_start_ROK_desc:0 "The tension on the Korean peninsula has risen again, the future war is already visible on the horizon."
+ integration_of_the_north:0 "Integration of the North"
+ integration_of_the_north_desc:0 "70 years of separation left deep wounds on the Korean people. Residents of the north and south almost do not consider themselves part of something unified. The gulf between them lies not only in ideology, but also in economics! Even despite the fact that the population of both the south and the north call themselves Koreans, they mean completely different things by this. The unification of the nation will not happen overnight, if we do everything gradually and thoughtfully, then we will be able to erase the differences between "South Koreans" and "North Koreans""
+ reinforce_garrison:0 "Reinforce Garrison"
+ carry_out_anti_guerrilla_operation:0 "Carry out an anti-guerrilla operation"
+ KOR_decision_cost:0 "£command_power  §Y30§!"
+ KOR_decision_cost_blocked:0 "£command_power  §Y30§!"
+ start_pro_democracy_campaign:0 "Start a pro-democracy campaign"
+ integrate_the_state:0 "Integrate [From.GetName]"
