--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2649,3 +2649,8 @@
  KUR_ahmed_barzani:0 "Ahmed Barzani"
  KUR_ihsan_nuri:0 "Ihsan Nuri"
  NEP_royal_army:0 "Royal Nepalese Army"
+ war_on_the_horizon_WPK:0 "War on the Horizon"
+ war_on_the_horizon_WPK_desc:0 "The fact that the war is approaching greatly affects our population. Many of our citizens fell into panic and despair from the fear of the future. It also greatly affects our diplomatic position in the world, because of the risk of losing investments and the real risk of the disappearance of the country."
+ war_on_the_horizon_ROK:0 "War on the Horizon"
+ war_on_the_horizon_ROK_desc:0 "The fact that the war is approaching greatly affects our population. Many of our citizens fell into panic and despair from the fear of the future. It also greatly affects our diplomatic position in the world, because of the risk of losing investments and the real risk of the disappearance of the country."
+ WPK_total_economic_sanctions:0 "Total Economic Sanctions"
